fix: adjust spacing in multiple components for improved layout consistency

--- a/src/styles/Inputs/Inputs.module.css
+++ b/src/styles/Inputs/Inputs.module.css
@@ -73,7 +73,6 @@
 
 .inputEmptyAfterSubmitBorder {
   border: 1px solid var(--border-input-error);
-  color:'var(--text-error)'
 }
 
 /* fixed Input */
